[gd_scene load_steps=14 format=3 uid="uid://dmdhx5rfwwwe0"]

[ext_resource type="Script" path="res://scenes/rooms/quiz_room/quiz_room.gd" id="1_coemx"]
[ext_resource type="Theme" uid="uid://cpendnc1jo8it" path="res://assets/theme.tres" id="2_7olu8"]
[ext_resource type="Texture2D" uid="uid://jl7d4q2u4xii" path="res://assets/dizzybak3.png" id="3_efx74"]
[ext_resource type="Script" path="res://scenes/rooms/quiz_room/question_label.gd" id="3_gf6b6"]
[ext_resource type="Script" path="res://scenes/rooms/quiz_room/question_picture_texture_rect.gd" id="4_kcu15"]
[ext_resource type="Texture2D" uid="uid://djl6tpca442ww" path="res://assets/quiz_room_angle_left.png" id="4_mk0b7"]
[ext_resource type="Script" path="res://scenes/rooms/quiz_room/previous_question_button.gd" id="4_rj35b"]
[ext_resource type="Script" path="res://scenes/rooms/quiz_room/next_question_button.gd" id="5_a56pm"]
[ext_resource type="Texture2D" uid="uid://bughvyolmfe5c" path="res://assets/quiz_room_angle_right.png" id="5_tli8d"]
[ext_resource type="Script" path="res://scenes/rooms/quiz_room/show_question_button.gd" id="6_4yqvr"]
[ext_resource type="Script" path="res://scenes/global/basic_button.gd" id="6_ikxkn"]
[ext_resource type="Script" path="res://scenes/rooms/quiz_room/question_timer_display.gd" id="6_luepd"]
[ext_resource type="FontFile" uid="uid://bs72jee12ot1g" path="res://assets/COMIC_SANS.TTF" id="6_q6gl6"]

[node name="QuizRoom" type="ColorRect"]
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0.337876, 0.760943, 1)
script = ExtResource("1_coemx")
metadata/_edit_lock_ = true

[node name="BackgroundMain" type="TextureRect" parent="."]
modulate = Color(0, 0.334642, 0.784816, 1)
layout_mode = 0
offset_left = -292.0
offset_right = 2249.0
offset_bottom = 1609.0
theme = ExtResource("2_7olu8")
texture = ExtResource("3_efx74")
expand_mode = 1
stretch_mode = 4
flip_h = true
metadata/_edit_lock_ = true

[node name="BackgroundBorderLeft" type="TextureRect" parent="."]
modulate = Color(0.141195, 0.113671, 2.40654e-08, 1)
layout_mode = 0
offset_left = -43.0
offset_right = 457.0
offset_bottom = 1080.0
texture = ExtResource("4_mk0b7")
metadata/_edit_lock_ = true

[node name="BackgroundBorderRight" type="TextureRect" parent="."]
modulate = Color(0.1, 0.0816667, 0, 1)
layout_mode = 0
offset_left = 1468.0
offset_right = 1968.0
offset_bottom = 1080.0
texture = ExtResource("5_tli8d")
metadata/_edit_lock_ = true

[node name="QuestionTitleLabel" type="Label" parent="."]
z_index = 3
layout_mode = 0
offset_left = 168.0
offset_top = 86.0
offset_right = 760.0
offset_bottom = 209.0
theme = ExtResource("2_7olu8")
theme_override_font_sizes/font_size = 80
text = "-"

[node name="QuestionColorRect" type="ColorRect" parent="."]
z_as_relative = false
layout_mode = 0
offset_left = 42.0
offset_top = 49.0
offset_right = 1137.0
offset_bottom = 752.0
color = Color(0.29073, 0.500178, 1, 0.941176)

[node name="QuestionLabel" type="Label" parent="QuestionColorRect"]
z_index = 1
z_as_relative = false
layout_mode = 1
anchors_preset = -1
offset_left = 43.0
offset_top = 186.0
offset_right = 572.0
offset_bottom = 649.0
theme = ExtResource("2_7olu8")
theme_override_fonts/font = ExtResource("6_q6gl6")
text = "-"
autowrap_mode = 2
script = ExtResource("3_gf6b6")

[node name="QuestionPictureTextureRect" type="TextureRect" parent="QuestionColorRect"]
layout_mode = 0
offset_left = 585.0
offset_top = 187.0
offset_right = 1060.0
offset_bottom = 662.0
script = ExtResource("4_kcu15")

[node name="ShowQuestionButton" type="Button" parent="."]
z_index = 7
layout_mode = 0
offset_left = 132.0
offset_top = 76.0
offset_right = 801.0
offset_bottom = 217.0
theme = ExtResource("2_7olu8")
disabled = true
text = "LETS ROCK"
script = ExtResource("6_4yqvr")

[node name="CategoryColorRect" type="ColorRect" parent="."]
z_index = 1
z_as_relative = false
layout_mode = 0
offset_left = 1590.0
offset_top = 45.0
offset_right = 1923.0
offset_bottom = 148.0
mouse_filter = 2
color = Color(0.1541, 0.15916, 0.23, 1)
metadata/_edit_group_ = true

[node name="CategoryLabel" type="Label" parent="CategoryColorRect"]
z_index = 4
layout_mode = 0
offset_left = 23.0
offset_top = 3.0
offset_right = 305.0
offset_bottom = 94.0
theme = ExtResource("2_7olu8")
theme_override_font_sizes/font_size = 50
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerListColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_top = 860.0
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 0.627451)

[node name="OpenCategoriesButton" type="Button" parent="."]
z_index = 2
layout_mode = 0
offset_left = 1402.0
offset_top = 49.0
offset_right = 1578.0
offset_bottom = 142.0
theme = ExtResource("2_7olu8")
theme_override_font_sizes/font_size = 38
text = "CATEGORY
"
script = ExtResource("6_ikxkn")

[node name="PreviousQuestionButton" type="Button" parent="."]
layout_mode = 0
offset_left = 71.0
offset_top = 84.0
offset_right = 121.0
offset_bottom = 204.0
theme = ExtResource("2_7olu8")
theme_override_font_sizes/font_size = 80
text = "<"
script = ExtResource("4_rj35b")

[node name="NextQuestionButton" type="Button" parent="."]
layout_mode = 0
offset_left = 809.0
offset_top = 88.0
offset_right = 859.0
offset_bottom = 208.0
theme = ExtResource("2_7olu8")
theme_override_font_sizes/font_size = 80
text = ">"
script = ExtResource("5_a56pm")

[node name="QuestionTimerDisplay" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 1403.0
offset_top = 157.0
offset_right = 1912.0
offset_bottom = 213.0
theme = ExtResource("2_7olu8")
color = Color(0.1988, 0.20692, 0.28, 1)
script = ExtResource("6_luepd")

[node name="Timer" type="Timer" parent="QuestionTimerDisplay"]
wait_time = 15.0
one_shot = true
